<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ UsageDirectPlus
  ~ Copyright (C) 2020 Fynn Godau
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">UsageDirectPlus debug</string>
    <string name="explanation_access_appusage_message">Please grant access to your system\'s usage statistics on the next page.\n\nPlease make sure to grant access to the debug version of UsageDirectPlus.</string>
    <string name="menu_debug">Debug options</string>
    <string name="menu_debug_database">Database inspector</string>
    <string name="menu_debug_custom_query">Custom event log query</string>

    <string name="db_status">At the moment, there are %d days stored in the database, amounting to a total of %dh.</string>
    <string name="db_browser_capture_wait">Browser capture status unavailable.</string>
    <string name="db_browser_capture">Browser capture: %1$s\nLast package: %2$s\nLast time: %3$s</string>
    <string name="db_browser_capture_no_package">none</string>
    <string name="db_browser_capture_no_time">never</string>
    <string name="db_insert">Copy up to 10 days into database</string>
    <string name="db_wait">Gathering data…</string>
    <string name="db_schedule">Automatic inserts scheduled</string>

    <string name="custom_query_go">Query now</string>
    <string name="custom_query_headline">Select query timespan</string>
    <string name="custom_query_middle_text">until</string>

</resources>
