<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e1f5fe"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#01579b"
        android:text="@string/db_wait"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/text_browser_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="#01579b"
        android:text="@string/db_browser_capture_wait" />

    <Button
        android:id="@+id/button_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_insert"
        />

    <CheckBox
        android:id="@+id/button_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_schedule"
        />

</LinearLayout>
